<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="number1">Number 1: </string>
    <string name="number2">Number 2:</string>
    <string name="result">Result :</string>
    
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiple">*</string>
    <string name="division">/</string>
    <string name="equal">=</string>

</resources>